add get resource
