# event-listener/src/main/java/com/ebay/app/raptor/chocolate/gen/api/EventsApi.java
@@ -26,4 +26,19 @@ public interface EventsApi {
     )
     @PreAuthorize("hasAuthority('https://api.ebay.com/oauth/scope/@public') and hasAuthority('https://api.ebay.com/oauth/scope/base@public') and hasAuthority('https://api.ebay.com/oauth/scope/experience@public')")
     Response event(Event body);
+
+    @GET
+    @Path("/version")
+    @ApiOperation(value = "Get api version", notes = "Get marketing tracking api version", authorizations = {
+      @Authorization(value = "app_scope_auth", scopes = {
+        @AuthorizationScope(scope = "https://api.ebay.com/oauth/scope/@public", description = "This scope would allow public access."),
+        @AuthorizationScope(scope = "https://api.ebay.com/oauth/scope/base@public", description = "This scope would allow base public access."),
+        @AuthorizationScope(scope = "https://api.ebay.com/oauth/scope/experience@public", description = "This scope would allow experience public access.")        })    }, tags={  })
+    @ApiResponses(value = {
+      @ApiResponse(code = 201, message = "Created", response = Void.class),
+      @ApiResponse(code = 400, message = "Rejected due to message format", response = ErrorModel.class),
+      @ApiResponse(code = 500, message = "The call was unsuccessful due to exceptions on the Server", response = Void.class) }
+    )
+    @PreAuthorize("hasAuthority('https://api.ebay.com/oauth/scope/@public') and hasAuthority('https://api.ebay.com/oauth/scope/base@public') and hasAuthority('https://api.ebay.com/oauth/scope/experience@public')")
+    Response version();
 }
